# zakopane

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tmp  cmp-zakopane.py  simple-zakopane.sh  zakopane.profile
src/: checksum.rs  compare.rs  config.rs  helpers.rs  libzakopane.rs  main.rs  snapshot.rs  structs.rs  violations.rs
tests/: checksum.rs  compare.rs
tests/checksum-test-data/: random-data-00
tests/checksum-test-data/basic-test/: random-data-01
tests/checksum-test-data/hidden-target-test/.hidden/: random-data-00  random-data-01
tests/checksum-test-data/hidden-target-test/.hidden/.hidden-more/: you-found-me.txt
tests/checksum-test-data/symlink-test/: symlink-to-empty-file
tests/config-test-data/: config-with-several-more-policies  config-with-several-policies  flagrantly-invalid-yaml
zakocmp/: Cargo.toml  README.md
zakocmp/config-test-data/: config-with-default-policy  config-with-ill-formed-policies  config-without-default-policy  config-without-specific-policies
zakocmp/src/: config.rs  errors.rs  helpers.rs  libzakocmp.rs  libzakopane.rs  main.rs  snapshot.rs  structs.rs  violations.rs
zakocmp/tests/: integration.rs
zakopane/: __init__.py  file.py  hash.py  main.py
