[package]
name = "zakopane"
version = "0.3.0"
authors = ["j39m"]
edition = "2018"

[lib]
name = "libzakopane"
path = "src/libzakopane.rs"

[[bin]]
name = "zakopane"
path = "src/bin/zakopane.rs"

[dependencies]
yaml-rust = "^0"
indoc = "^1"
clap = "^2"
tokio = { version = "1", features = ["full"] }
crypto-hash = "^0.3"
walkdir = "^2"
chrono = "^0.4"
