[package]
name = "zakopane"
version = "0.3.1"
authors = ["j39m"]
edition = "2021"

[lib]
name = "libzakopane"
path = "src/libzakopane.rs"

[[bin]]
name = "zakopane"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["cargo", "derive"] }
crypto-hash = "0.3"
indoc = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
yaml-rust = "0"
